--- a/convention/boot-common.gradle
+++ b/convention/boot-common.gradle
@@ -17,8 +17,19 @@ configurations {
 // Spring Bootで提供される依存関係設定
 // https://docs.spring.io/dependency-management-plugin/docs/current-SNAPSHOT/reference/html/
 dependencyManagement {
+	// implementation 等でバージョンを指定してもmavenBomの指定をオーバーライド出来なくします
+	overriddenByDependencies = false
+
 	imports {
 		mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+	dependencies {
+		// 上記のoverriddenByDependenciesでプロジェクト個別での上書きを禁止した代わりに
+		// ここでライブラリのバージョンを一元管理します。
+
+		// spring boot 2.7.3   1.30 → 1.31
+		// https://nvd.nist.gov/vuln/detail/CVE-2022-25857
+		dependency 'org.yaml:snakeyaml:1.31'
 	}
 }
